# syft4fond

./: CMakeLists.txt  README.md  run-dfa.sh  run-synthesis.sh
EmpiricalResults/: bw-dfa-results.csv  bw-ext-dfa-results.csv  bw-ext-syft-results.csv  bw-syft-results.csv  elev-dfa-results.csv  elev-syft-results.csv  quad-dfa-results.csv  quad-syft-results.csv  triangle-dfa-triangle.sh  triangle-syft-results.csv
src/: CMakeLists.txt  pddl2dfa.cpp  syft4fond.cpp
unreleased/AgentSafeInvariant/: Domain.cpp
unreleased/BEST-main(AgErrBDD+Invariants)/: Domain.cpp  FONDBestEffortReachabilitySynthesizer.cpp  FONDBestEffortReachabilitySynthesizer.h
unreleased/DropPre4CondEff/: Domain.cpp  Domain.h  FONDBestEffortReachabilitySynthesizer.cpp
unreleased/LTLfAgentError/: Domain.cpp  Domain.h  FONDBestEffortReachabilitySynthesizer.cpp
unreleased/LTLfSynthesizer/: FONDSynthesizer.cpp  FONDSynthesizer.h
unreleased/PDDL2LTLf/: Domain.cpp
unreleased/main/: FONDSynthesizer.h
unreleased/miscellaneous/: invariants_test_codes.txt
